# ChartStudio

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
core/: __init__.py  ai_prompt.py  annotations.py  api_server.py  app_state.py  axis_limits.py  axis_panel.py  bar_colors.py  chart_linter.py  cli.py  cli_paths.py  config_loader.py  config_migrate.py  config_snapshots.py  config_utils.py  config_validator.py  constants.py  data_coercion.py  data_importer.py  data_keys.py  data_label_format.py  data_preview.py  diff_utils.py  dynamic_importer.py  exporter.py  field_labels.py  field_options.py  font_registry.py  font_runtime.py  font_utils.py  heatmap_cmaps.py  layout.py  panel_groups.py  path_utils.py  project_manager.py  project_packager.py  project_path_input.py  render_service.py  semantic_widgets.py  series_sync.py  (+11 more)
examples/v2_annotations_acceptance/: TODO.md  chart_config.yaml  chart_core.py  reproduce.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  coords.ts  index.css  pathValidation.ts  store.ts  types.ts
templates/bar_chart_basic/: chart_config.yaml  chart_core.py  chart_project.yaml
templates/heatmap_basic/: chart_config.yaml  chart_core.py  chart_project.yaml
templates/horizontal_bar_chart/: chart_config.yaml  chart_core.py  chart_project.yaml
templates/line_chart_basic/: chart_config.yaml  chart_core.py  chart_project.yaml
templates/line_chart_report/: chart_config.yaml  chart_core.py  chart_project.yaml
templates/scatter_chart_basic/: chart_core.py  (+2 more)
(+12 files in other folders)
