[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chartstudio"
version = "0.2.0"
description = "本地科研图表工具 ChartStudio"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
chartstudio = "core.cli:main_entry"
cs = "core.cli:main_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
